--- a/pom.xml
+++ b/pom.xml
@@ -12,4 +12,7 @@
     <groupId>de.cosmocode</groupId>
     <version>1.2</version>
   </parent>
+  <scm>
+  	<developerConnection>scm:svn:http://commons.svn.cosmocode.de/eclipse-config/trunk</developerConnection>
+  </scm>
 </project>
