--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,6 @@
     <version>1.3</version>
   </parent>
   <scm>
-  	<developerConnection>scm:svn:http://commons.svn.cosmocode.de/eclipse-config/trunk</developerConnection>
+  	<developerConnection>scm:svn:https://commons.svn.cosmocode.de/eclipse-config/trunk</developerConnection>
   </scm>
 </project>
