--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,44 @@
   <version>1.1-SNAPSHOT</version>
   <name>CosmoCode Eclipse Configs</name>
   <url>http://www.cosmocode.de</url>
-  <parent>
-    <artifactId>cosmocode-parent</artifactId>
-    <groupId>de.cosmocode</groupId>
-    <version>1.5.2</version>
-  </parent>
+  <distributionManagement>
+    <repository>
+      <id>cosmocode-public-releases</id>
+      <name>CosmoCode public releases</name>
+      <url>scp://mvn.cosmocode.de:6589/var/www/mvn/</url>
+    </repository>
+    <snapshotRepository>
+      <id>cosmocode-private-snapshots</id>
+      <name>CosmoCode private snapshots</name>
+      <url>http://mvn.cosmo/repository/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+  <profiles>
+    <profile>
+      <id>cosmocode-public-snapshots</id>
+      <distributionManagement>
+        <snapshotRepository>
+          <id>cosmocode-public-snapshots</id>
+          <name>CosmoCode public snapshots</name>
+          <url>scp://mvn.cosmocode.de:6589/var/www/mvn/</url>
+        </snapshotRepository>
+      </distributionManagement>
+    </profile>
+    <profile>
+      <id>cosmocode-private-releases</id>
+      <distributionManagement>
+        <repository>
+          <id>cosmocode-private-releases</id>
+          <name>CosmoCode private releases</name>
+          <url>http://mvn.cosmo/repository/internal</url>
+        </repository>
+      </distributionManagement>
+    </profile>
+  </profiles>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <scm>
-  	<developerConnection>scm:svn:https://commons.svn.cosmocode.de/eclipse-config/trunk</developerConnection>
+    <developerConnection>scm:svn:https://commons.svn.cosmocode.de/eclipse-config/trunk</developerConnection>
   </scm>
 </project>
