[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>de.cosmocode</groupId>
   <artifactId>eclipse-config</artifactId>
   <packaging>jar</packaging>
-  <version>1.1.0</version>
+  <version>1.2-SNAPSHOT</version>
   <name>CosmoCode Eclipse Configs</name>
   <url>http://www.cosmocode.de</url>
   <distributionManagement>
@@ -44,6 +44,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <scm>
-    <developerConnection>scm:svn:https://commons.svn.cosmocode.de/eclipse-config/tags/1.1.0</developerConnection>
+    <developerConnection>scm:svn:https://commons.svn.cosmocode.de/eclipse-config/trunk</developerConnection>
   </scm>
 </project>
