--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
 
     <groupId>de.cosmocode</groupId>
     <artifactId>eclipse-config</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2.0</version>
 
     <packaging>jar</packaging>
 
     <scm>
-        <developerConnection>scm:svn:https://commons.svn.cosmocode.de/eclipse-config/trunk</developerConnection>
+        <developerConnection>scm:svn:https://commons.svn.cosmocode.de/eclipse-config/tags/1.2.0</developerConnection>
     </scm>
 
     <properties>
