--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
 
     <groupId>de.cosmocode</groupId>
     <artifactId>eclipse-config</artifactId>
-    <version>1.3.0</version>
+    <version>1.4-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
     <scm>
-        <developerConnection>scm:svn:https://commons.svn.cosmocode.de/eclipse-config/tags/1.3.0</developerConnection>
+        <developerConnection>scm:svn:https://commons.svn.cosmocode.de/eclipse-config/trunk</developerConnection>
     </scm>
 
     <properties>
