--- a/pom.xml
+++ b/pom.xml
@@ -1,32 +1,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-
-	<parent>
-		<groupId>de.cosmocode</groupId>
-		<artifactId>cosmocode-distribution</artifactId>
-		<version>1.0.0</version>
-	</parent>
-
-	<name>CosmoCode Eclipse Configs</name>
-
-	<groupId>de.cosmocode</groupId>
-	<artifactId>eclipse-config</artifactId>
-	<version>1.4-SNAPSHOT</version>
-
-	<packaging>jar</packaging>
-
-	<scm>
-		<developerConnection>scm:svn:https://commons.svn.cosmocode.de/eclipse-config/trunk</developerConnection>
-	</scm>
-	<repositories>
-		<repository>
-			<id>cosmocode-public</id>
-			<name>CosmoCode Public Maven Repository</name>
-			<url>http://mvn.cosmocode.de/</url>
-		</repository>
-	</repositories>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>de.cosmocode</groupId>
+    <artifactId>cosmocode-distribution</artifactId>
+    <version>1.0.0</version>
+  </parent>
+  <name>CosmoCode Eclipse</name>
+  <groupId>de.cosmocode</groupId>
+  <artifactId>eclipse-config</artifactId>
+  <version>1.4-SNAPSHOT</version>
+  <packaging>jar</packaging>
+  <scm>
+    <developerConnection>scm:git:git@github.com:cosmocode/cosmocode-eclipse.git</developerConnection>
+  </scm>
+  <repositories>
+    <repository>
+      <id>cosmocode-public</id>
+      <name>CosmoCode Public Maven Repository</name>
+      <url>http://mvn.cosmocode.de/</url>
+    </repository>
+  </repositories>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 </project>
