--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <name>CosmoCode Eclipse</name>
   <groupId>de.cosmocode</groupId>
-  <artifactId>eclipse-config</artifactId>
+  <artifactId>cosmocode-eclipse</artifactId>
   <version>1.4-SNAPSHOT</version>
   <packaging>jar</packaging>
   <scm>
